--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -7,5 +7,6 @@
     "/js/paginas/contas/receber.js": "/js/paginas/contas/receber.js",
     "/js/paginas/home.js": "/js/paginas/home.js",
     "/js/paginas/previsto_realizado.js": "/js/paginas/previsto_realizado.js",
+    "/js/paginas/receb_tomate.js": "/js/paginas/receb_tomate.js",
     "/css/app.css": "/css/app.css"
 }
